# agent-urban-planning

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  MAPPING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
data/: README.md
data/berlin/agents/: berlin_ortsteile_richer_10k.yaml
data/berlin/bezirke/: fund_2006.npz  tt_2006_actual.npz  tt_2006_public.npz
data/berlin/blocks/: fund_2006.npz
data/berlin/crosswalks/: aggregation_rules.yaml  blocks_1936_to_ortsteile.csv  blocks_1986dw_to_ortsteile.csv  blocks_1986rw_to_ortsteile.csv  blocks_to_bezirke.csv  blocks_to_ortsteile.csv
data/berlin/llm_cache_v5/: README.md  croissant.json
data/berlin/ortsteile/: fund_1936.npz  fund_1986.npz  fund_1986dw.npz  fund_1986rw.npz  fund_2006.npz  side_1986.npz  tt_1936.npz  tt_1986.npz  tt_1986dw.npz  tt_1986rw.npz  tt_2006_actual.npz  tt_2006_public.npz  zone_names.csv
data/berlin/ortsteile_joint/: joint_2011.npz  joint_2011_richer.report.json
data/berlin/params/: EThetaA.json
data/berlin/public_demographics/: _provenance.json  bezirk_car_ownership.csv  bezirk_employment.csv  bezirk_income_distribution.csv  ortsteile_age_sex.csv  ortsteile_education.csv  ortsteile_household_size.csv  ortsteile_households_with_children.csv  ortsteile_households_with_elderly.csv  ortsteile_migration.csv  ortsteile_tenure.csv
data/berlin/scenarios/: berlin_2006_ortsteile.yaml
data/berlin/shocks/: east_west_express.yaml
docs/: conf.py  index.md
docs/_templates/autosummary/: class.rst
docs/api/: index.rst
docs/concepts/: architecture.md  decision_engines.md  llm_integration.md
docs/reproducibility/: berlin_v1_v5.md  berlin_v1_v5_4.md  shock_analysis.md
docs/tutorials/: 01_quickstart.md  02_custom_decision_engine.md  03_full_llm_v5.md  04_berlin_replication.md
examples/: 01_quickstart.py  01_quickstart_two_zone.py
examples/02_berlin_replication/: README.md  _common.py  build_moments_table.py  plot_dlogQ_dlogw.py  run_v1_softmax.py  run_v2_argmax_frechet.py  run_v4_hybrid.py  run_v5_score_all.py
examples/03_berlin_replication/: README.md  _common.py  run_v1_softmax.py  run_v2_argmax_frechet.py  run_v3_argmax_normal.py  run_v4_hybrid.py  run_v4b_hybrid.py  run_v5_4_score_all.py  run_v5_score_all.py
figures/: comparison_moments.csv
src/agent_urban_planning/: __init__.py
src/agent_urban_planning/analysis/: __init__.py
src/agent_urban_planning/core/: __init__.py  agents.py  constraints.py  engine.py  environment.py  interview.py  labor_market.py  market.py  market_open_city.py  metrics.py  monte_carlo.py  results.py  run_metadata.py
src/agent_urban_planning/data/: __init__.py  loaders.py
src/agent_urban_planning/decisions/: __init__.py  ahlfeldt_abm_engine.py  ahlfeldt_argmax_hybrid_engine.py  ahlfeldt_hierarchical_llm_engine.py  ahlfeldt_hybrid_engine.py  ahlfeldt_shock_argmax_hybrid_engine.py  ahlfeldt_utility.py  base.py  llm.py  (+7 more)
tools/: check_docstrings.py
(+16 files in other folders)
