[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-urban-planning"
description = "Agent-based urban planning simulator with closed-form, hybrid, and full-LLM decision engines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = [
    "agent-based-modeling",
    "urban-planning",
    "spatial-equilibrium",
    "large-language-models",
    "ahlfeldt-2015",
    "berlin",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
authors = [
    {name = "TBD"},
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "python-dotenv>=1.0",
    "requests>=2.28",
]
dynamic = ["version"]

[project.optional-dependencies]
llm = [
    "anthropic>=0.30",
    "openai>=1.0",
    "aiohttp>=3.9",
    "scikit-learn>=1.3",
]
plot = [
    "geopandas>=0.14",
]
berlin = [
    "h5py>=3.8",
    "mat73>=0.60",
]
docs = [
    "sphinx>=7.0",
    "furo>=2023.0",
    "sphinx-autodoc-typehints>=1.24",
    "myst-parser>=2.0",
    "sphinx-design>=0.5",
    "sphinx-copybutton>=0.5",
    "sphinxcontrib-mermaid>=0.9",
    "sphinx-codeautolink>=0.15",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "pandas>=2.0",
    "build>=1.0",
    "twine>=4.0",
]
all = [
    "agent-urban-planning[llm,plot,berlin,docs,dev]",
]

[project.urls]
Homepage = "https://github.com/TBD/agent-urban-planning"
Documentation = "https://agent-urban-planning.readthedocs.io"
Repository = "https://github.com/TBD/agent-urban-planning"
Issues = "https://github.com/TBD/agent-urban-planning/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "agent_urban_planning.__version__"}

[tool.setuptools.package-data]
agent_urban_planning = ["data/builtin/*.yaml", "data/builtin/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests requiring bundled Berlin data (deselect with -m 'not integration')",
    "slow: marks slow tests (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP", "ARG", "SIM", "PL"]
ignore = [
    "E501",   # line too long (matplotlib examples often long)
    "PLR0913", # too many args (functional API has many)
]
